--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.39.1",
     "react-native": "0.69.6",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
